--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div>
-      <img src="..img/logo.jpg" id="img_cabe"> </a>
+      <img src="../img/logo.jpg" id="img_cabe"> </a>
     </div>
     <nav>
       <!--div que contiene el menu-->
