--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-<meta charset="UTF-8">
-<!-- Declaración de fichero de estilos -->
-<link rel="stylesheet" href="../estilos/estilos.css">
-<title> Trabajo Final</title>
-
-</head>
+ <head>
+    <meta charset="UTF-8">
+    <!-- Declaración de fichero de estilos -->
+    <link rel="stylesheet" type="text/css" href="../estilos/estilos.css">
+    <title>Trabajo Final</title>
+ </head>
   
-<body>
-  <header>
-    <div>
-      <img src="../img/logo.jpg" id="img_cabe"> </a>
-    </div>
-    <nav>
-      <!--div que contiene el menu-->
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="presupuesto.html">Presupuesto</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>  
-    </nav>
-  </header> 
-  <!--Seccion con mapa y contacto de la empresa-->
-  <h1>¿Donde nos ubicamos?</h1> <span> <img src="../img/mapview.jpeg" id="img-map"></span>
-  <p> Calle Gran Vía,78
-   <br> 28013 Madrid,Madrid
-   <br> +34666766677
-   <br> camisasfut@gmail.es
-  </p>
+ <body>
+    <header>
+        <div>
+            <img src="../img/logo.png" id="img_cabe" alt="Logo de la empresa" width="100" height="100">
+        </div>
+        <nav>
+            <!-- Div que contiene el menú -->
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../views/productos.html">Productos</a></li>
+                <li><a href="../views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="../views/contacto.html" class="nav-active">Contacto</a></li>
+            </ul>  
+        </nav>
+    </header>
+           <!--Seccion con mapa y contacto de la empresa-->
+           <h1>¿Donde nos ubicamos?</h1> <div> <img src="../img/mapview.jpeg" id="img-map" alt="mapa"></div>
+             <p> Calle Gran Vía,78
+              <br> 28013 Madrid,Madrid
+              <br> +34666766677
+              <br> camisasfut@gmail.es
+            </p>
    
-  <footer>
-    <!--Div que contiene el pié de la pagina-->
-          <div id="div_footer">
-               ::masterD::trabajo final::Todos los derechos reservados::
-               <br><a href="https://es-es.facebook.com"> <img src="../img/facebook.jpg" id="minilink"></a>
-                   <a href="https://www.instagram.com"><img src="../img/Instagram_logo_2022.svg.png" id="minilink"></a>
-                   <a href="https://x.com/?lang=es"><img src="../img/xlogo.avif" id="minilink"></a>
-          </div>
-       </footer>  
-       
-   </body>
+   <footer>
+          <!-- Div que contiene el pie de la página -->
+     <div id="div_footer">
+        ::masterD::Trabajo final::Todos los derechos reservados::
+        <br>
+        <a href="https://es-es.facebook.com">
+            <img src="../img/facebook.jpg" id="minilink" alt="Facebook" width="30" height="30">
+        </a>
+        <a href="https://www.instagram.com">
+            <img src="../img/Instagram_logo_2022.svg.png" id="minilink" alt="Instagram" width="30" height="30">
+        </a>
+        <a href="https://x.com/?lang=es">
+            <img src="../img/xlogo.avif" id="minilink" alt="X" width="30" height="30">
+        </a>
+        <br>
+        <a href="#">Aviso Legal</a>
+     </div>
+   </footer>  
+ </body>
 </html>
