--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -1,49 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<!-- Declaración de fichero de estilos -->
-<link rel="stylesheet" type="text/css" href="../estilos/estilos.css">
-<title> Trabajo Final </title>
-
+    <meta charset="UTF-8">
+    <!-- Declaración de fichero de estilos -->
+    <link rel="stylesheet" type="text/css" href="../estilos/estilos.css">
+    <title>Trabajo Final</title>
 </head>
   
 <body>
-  <header>
-    <div>
-      <img src="../img/logo.jpg" id="img_cabe"> </a>
-    </div>
-    <nav>
-      <!--div que contiene el menu-->
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="presupuesto.html">Presupuesto</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>  
-    </nav>
-</header> 
- <!--Seccion con el formulario-->
- <h1>¿Quieres saber mas de nuestros servicios?</h1><span> <img src="../img/city.jpg" id="imagen_presu"></span>
-   <p>Rellena el formulario a continuación y nos pondremos en contacto contigo </br>
-     <br>Nombre: <input type="text" name="nombre" id="nombre" value=""> </br>
-     <br>Email: <input type="text" name="email" id="email" value=""> </br>
-     <br>Teléfono: <input type="text" name="telefono" id="telefono" value=""> </br>
-     <br>Solicite más información:
-     <br><textarea cols="30" rows="6" name="prueba"></textarea> </br> </p>
-     <input type="checkbox" name="casilla" value="acepto" > He leido y acepto la "Política de privacidad"
-     de la empresa </br>
-      <br><input type="submit" name="boton" value="enviar"> </br>
+    <header>
+        <div>
+            <img src="../img/logo.png" id="img_cabe" alt="Logo de la empresa" width="100" height="100">
+        </div>
+        <nav>
+            <!-- Div que contiene el menú -->
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../views/productos.html">Productos</a></li>
+                <li><a href="../views/presupuesto.html" class="nav-active">Presupuesto</a></li>
+                <li><a href="../views/contacto.html">Contacto</a></li>
+            </ul>  
+        </nav>
+    </header>
+<!-- Sección con el formulario -->
+<section>
+  <h1>¿Quieres saber más de nuestros servicios?</h1>
+  <div>
+      <img src="../img/city.jpg" alt="city" id="imagen_presu">
+  </div>
+  <p>Rellena el formulario a continuación y nos pondremos en contacto contigo</p>
+  
+  <form action="#" method="post">
+      <!-- Etiqueta label para mejorar la accesibilidad -->
+      <label for="nombre">Nombre:</label>
+      <input type="text" name="nombre" id="nombre" required>
+      <br>
 
-   <footer>
-     <!--Div que contiene el pié de la pagina-->
-           <div id="div_footer">
-                ::masterD::Trabajo final::Todos los derechos reservados::
-                <br><a href="https://es-es.facebook.com"> <img src="../img/facebook.jpg" id="minilink"></a>
-                    <a href="https://www.instagram.com"><img src="../img/Instagram_logo_2022.svg.png" id="minilink"></a>
-                    <a href="https://x.com/?lang=es"><img src="../img/xlogo.avif" id="minilink"></a>
-           </div>
-        </footer>  
-        
-    </body>
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="email" required>
+      <br>
+
+      <label for="telefono">Teléfono:</label>
+      <input type="tel" name="telefono" id="telefono" required>
+      <br>
+
+      <label for="prueba">Solicite más información:</label>
+      <br>
+      <textarea cols="30" rows="10" name="prueba" id="prueba"></textarea>
+      <br>
+
+      <input type="checkbox" name="casilla" value="acepto" required> 
+      <label for="casilla">He leído y acepto la <a href="#">Política de privacidad</a> de la empresa</label>
+      <br>
+
+      <input type="submit" name="boton" value="Enviar">
+  </form>
+</section>
+
+      <footer>
+        <!-- Div que contiene el pie de la página -->
+        <div id="div_footer">
+            ::masterD::Trabajo final::Todos los derechos reservados::
+            <br>
+            <a href="https://es-es.facebook.com">
+                <img src="../img/facebook.jpg" id="minilink" alt="Facebook" width="30" height="30">
+            </a>
+            <a href="https://www.instagram.com">
+                <img src="../img/Instagram_logo_2022.svg.png" id="minilink" alt="Instagram" width="30" height="30">
+            </a>
+            <a href="https://x.com/?lang=es">
+                <img src="../img/xlogo.avif" id="minilink" alt="X" width="30" height="30">
+            </a>
+            <br>
+            <a href="#">Aviso Legal</a>
+        </div>
+    </footer>  
+</body>
 </html>
