--- a/views/productos.html
+++ b/views/productos.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-<meta charset="UTF-8">
-<!-- Declaración de fichero de estilos -->
-<link rel="stylesheet" type="text/css" href="../estilos/estilos.css">
-<title> Trabajo Final</title>
-
-</head>
+ <head>
+    <meta charset="UTF-8">
+    <!-- Declaración de fichero de estilos -->
+    <link rel="stylesheet" type="text/css" href="../estilos/estilos.css">
+    <title>Trabajo Final</title>
+ </head>
   
-<body>
-  <header>
-    <div>
-      <img src="../img/logo.jpg" id="img_cabe"> </a>
-    </div>
-      <nav>
-        <!--div que contiene el menu-->
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="presupuesto.html">Presupuesto</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>  
-      </nav>
-</header> 
+ <body>
+    <header>
+        <div>
+            <img src="../img/logo.png" id="img_cabe" alt="Logo de la empresa" width="100" height="100">
+        </div>
+        <nav>
+            <!-- Div que contiene el menú -->
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../views/productos.html" class="nav-active">Productos</a></li>
+                <li><a href="../views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="../views/contacto.html">Contacto</a></li>
+            </ul>  
+        </nav>
+    </header>
 <!--Div que contiene la galeria de productos-->
 <div class="container"> 
   <h1>Equipaciones temporada 2024/2025</h1> 
   
-  <img class="galeria" src="../img/barça.jpg">
-  <img class="galeria" src="../img/bayern.jpg">
-  <img class="galeria" src="../img/madrid.jpg">
-  <img class="galeria" src="../img/milan.avif">
+  <img class="galeria" src="../img/barça.jpg" alt="barcelona" height="299" width="200">
+  <img class="galeria" src="../img/bayern.jpg" alt="bayern" height="192" width="144">
+  <img class="galeria" src="../img/madrid.jpg" alt="madrid" height="128" width="128">
+  <img class="galeria" src="../img/milan.avif" alt="milan" height="450" width="450">
 
  </div>
  <div class="container"> 
   <h1>Camisetas Retro</h1> 
   
-  <img class="galeria" src="../img/roma.jpg.webp">
-  <img class="galeria" src="../img/sporting.png.webp">
-  <img class="galeria" src="../img/manchester.jpg.webp">
-  <img class="galeria" src="../img/inter-juve.jpg.webp">
+  <img class="galeria" src="../img/roma.jpg.webp" alt="roma" height="100" width="100">
+  <img class="galeria" src="../img/sporting.png.webp" alt="sporting" height="250" width="332">
+  <img class="galeria" src="../img/manchester.jpg.webp" alt="manchester" height="250" width="297">
+  <img class="galeria" src="../img/inter-juve.jpg.webp" alt="inter-juve" height="250" width="272">
 
  </div>
  <div class="container"> 
   <h1>Selecciones Nacionales Eurocopa/Copa America</h1> 
   
-  <img class="galeria" src="../img/argentina.jpeg.avif">
-  <img class="galeria" src="../img/españa.jpg.avif">
-  <img class="galeria" src="../img/vinotinto.jpg.webp">
-  <img class="galeria" src="../img/alemania.jpg.avif">
+  <img class="galeria" src="../img/argentina.jpeg.avif" alt="argentina" height="992" width="1323">
+  <img class="galeria" src="../img/españa.jpg.avif" alt="españa" height="1200" width="1200">
+  <img class="galeria" src="../img/vinotinto.jpg.webp" alt="vinotinto" height="200" width="120">
+  <img class="galeria" src="../img/alemania.jpg.avif" alt="alemania" height="600" width="600">
 
  </div>
 
 
- <body>
-
-
-
   <footer>
-    <!--Div que contiene el pié de la pagina-->
-          <div id="div_footer">
-               ::masterD::Trabajo final::Todos los derechos reservados::
-               <br><a href="https://es-es.facebook.com"> <img src="../img/facebook.jpg" id="minilink"></a>
-                   <a href="https://www.instagram.com"><img src="../img/Instagram_logo_2022.svg.png" id="minilink"></a>
-                   <a href="https://x.com/?lang=es"><img src="../img/xlogo.avif" id="minilink"></a>
-          </div>
-       </footer>  
-       
-   </body>
+    <!-- Div que contiene el pie de la página -->
+    <div id="div_footer">
+        ::masterD::Trabajo final::Todos los derechos reservados::
+        <br>
+        <a href="https://es-es.facebook.com">
+            <img src="../img/facebook.jpg" id="minilink" alt="Facebook" width="30" height="30">
+        </a>
+        <a href="https://www.instagram.com">
+            <img src="../img/Instagram_logo_2022.svg.png" id="minilink" alt="Instagram" width="30" height="30">
+        </a>
+        <a href="https://x.com/?lang=es">
+            <img src="../img/xlogo.avif" id="minilink" alt="X" width="30" height="30">
+        </a>
+        <br>
+        <a href="#">Aviso Legal</a>
+    </div>
+</footer>  
+ </body>
 </html>
